2000-05-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LIBOBJ_DECL, AC_LIBOBJ): New macros.
	(AC_REPLACE_FUNCS): Use AC_LIBOBJ.
	* acspecific.m4 (AC_FUNC_MKTIME, AC_FUNC_MEMCMP,
	AC_STRUCT_ST_BLOCKS): Use AC_LIBOBJ.
	* doc/autoconf.texi : Adjust so that the user is not encouraged to
	use LIBOBJS directly.
	(Generic Functions): Document AC_LIBOBJ_DECL and AC_LIBOBJ.

2000-05-09  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (AC_SEARCH_LIBS): Remove double quotes around `no'.

2000-05-09  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_FILES): Don't automatically spit
	`Generated by...' in Makefiles.
	Fixes Autoconf/102.

2000-05-09  Akim Demaille  <akim@epita.fr>

	Let `config.status' use a private temp dir.
	Suggested by Jim Meyering.

	* acgeneral.m4 (_AC_SHELL_TMPDIR): New macro.
	(_AC_OUTPUT_CONFIG_STATUS): Use it.
	Use more quoted here docs to improve readability.
	Compute `$me' and use it in the error messages.
	Define `$configure' and `$configure_args' to avoid continuously
	mixing the uses of `configure' and `config.status' evaluation in a
	single line.
	Define `$SHELL' and use it.
	Simplify all the unjustified `[\$]foo' into `\$foo', the quotes
	are needed only for `\$[1]', `\$[@]' etc.
	Replace all the uses of `ac_cs_root' with files in the tmp dir of
	`config.status'.
	Remove a few `rm' covered by the removal of the `$tmp' dir.
	Let `config.status' support `--debug'.
	(_AC_INIT_PREPARE): Avoid the leading space in `ac_configure_args'.
	* doc/autoconf.texi (Invoking config.status): Adjust.

2000-05-05  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Set up traps to remove
	temporaries upon exit, too, not just upon receipt of signal.

2000-05-05  Akim Demaille  <akim@epita.fr>

	AC_CHECK_PROG macro fails if REJECT value is set under Digital
	Unix 4.0x and 5.0 because `"$@"' expands into an empty parameter
	(instead of nothing) when there are no positional parameters.
	From Nicolas Joly.
